<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="125sp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/circle_background"
    android:layout_marginTop="10sp">
    <TextView
        android:id="@+id/names_item"
        android:layout_width="194dp"
        android:layout_height="47dp"
        android:layout_alignParentLeft="true"

        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:text="@string/names_course"
        android:textAppearance="@style/large_text_style"
        android:gravity="center_horizontal|top"
        android:fontFamily="@font/pattaya"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <ImageView
        android:id="@+id/bookmark"
        android:layout_width="20.48dp"
        android:layout_height="25.98dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="351dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:background="#00000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/bookmark"
        />
    <TextView
        android:id="@+id/nameUser_item"
        android:layout_width="67dp"
        android:layout_height="18dp"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="19dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="72dp"
        android:text="@string/my_name"
        android:textAppearance="@style/normal_text_style"
        android:gravity="center_horizontal|top"
        android:fontFamily="@font/pattaya"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        />
    <TextView
        android:id="@+id/money_item"
        android:layout_width="38dp"
        android:layout_height="19dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
          android:layout_marginTop="10sp"
        android:background="@drawable/square_background"
        app:layout_constraintTop_toBottomOf="@id/nameUser_item"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/money"
        android:textAppearance="@style/golden_style"
        android:textAlignment="center"
        android:fontFamily="@font/pattaya"
        />

    <TextView
        android:id="@+id/add_comment_item"
        android:layout_width="89dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="126dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"
        android:text="@string/add_comment"
        android:textAppearance="@style/normal_text_style"
        android:fontFamily="@font/pattaya"
        android:gravity="center_horizontal|top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <View
        android:id="@+id/comment_1"
        android:layout_width="24dp"
        android:layout_height="25dp"
        android:background="@drawable/comment_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="20sp"
        android:layout_marginLeft="50sp"

        />
    <TextView
        android:id="@+id/more_item"
        android:layout_width="60dp"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="300dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="82dp"
        android:text="@string/more"
        android:textAppearance="@style/normal_text_style"
        android:fontFamily="@font/pattaya"
        android:gravity="center_horizontal|top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>