<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/finishText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/pattaya"
        android:text="@string/finish_course"
        android:textAppearance="@style/large_text_style"
        android:gravity="top"
        />

    <ImageView
        android:id="@+id/mortarboardImg_id"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:src="@drawable/mortarboard"
        app:layout_constraintTop_toBottomOf="@id/finishText"
        android:layout_marginTop="80sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/certificateText_id"
        android:layout_width="152dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:text="@string/certificate"
        android:textAppearance="@style/very_great_text_style"
       android:fontFamily="@font/pattaya"

        android:gravity="top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mortarboardImg_id"
        />

    <TextView
        android:id="@+id/finished_CourseText_id"
        android:layout_width="228dp"
        android:layout_height="53dp"

        android:layout_alignParentTop="true"
        android:layout_marginTop="296dp"
        android:text="@string/finished_course"
        android:textAppearance="@style/large_text_style"
        android:fontFamily="@font/pattaya"
        android:gravity="top"
       app:layout_constraintTop_toBottomOf="@id/finishText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />


    <ImageView
        android:id="@+id/certificateImg_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/certificate"
        app:layout_constraintTop_toBottomOf="@id/finished_CourseText_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50sp"
        android:layout_marginStart="-50sp"
        />


    <TextView
        android:id="@+id/signatureText_id"
        android:layout_width="91dp"
        android:layout_height="33dp"
        android:layout_alignParentLeft="true"

        android:layout_alignParentTop="true"

        android:text="@string/signature"
        android:textAppearance="@style/large_text_style"
        android:fontFamily="@font/pattaya"
        android:gravity="top"
        app:layout_constraintBottom_toBottomOf="@id/certificateImg_id"
        app:layout_constraintTop_toTopOf="@id/certificateImg_id"
        app:layout_constraintLeft_toRightOf="@id/certificateImg_id"
        android:layout_marginStart="20sp"

        />


</androidx.constraintlayout.widget.ConstraintLayout>