<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.register.fragment.register.RegisterFragment">

    <TextView
        android:id="@+id/name_id"
        android:layout_width="33dp"
        android:layout_height="25dp"

        android:layout_alignParentTop="true"

        android:fontFamily="@font/pattaya"
        android:gravity="top"
        android:text="@string/name"
        android:textAppearance="@style/medium_large_text_style"
        app:layout_constraintBottom_toBottomOf="@id/name_edit_register"
        app:layout_constraintRight_toLeftOf="@id/name_edit_register"
        app:layout_constraintTop_toTopOf="@id/name_edit_register"
      android:layout_marginEnd="45sp"
        />



    <EditText
        android:id="@+id/name_edit_register"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="153dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/square_background"
        />

    <EditText
        android:id="@+id/surname_edit_register"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="223dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/square_background"
        />
    <TextView
        android:id="@+id/surname_id"
        android:layout_width="wrap_content"
        android:layout_height="25dp"

        android:layout_alignParentTop="true"

        android:fontFamily="@font/pattaya"
        android:gravity="top"
        android:text="@string/surname"
        android:textAppearance="@style/medium_large_text_style"
        app:layout_constraintBottom_toBottomOf="@id/surname_edit_register"
        app:layout_constraintRight_toLeftOf="@id/surname_edit_register"
        app:layout_constraintTop_toTopOf="@id/surname_edit_register"
        android:layout_marginEnd="10sp"
        />

    <EditText
        android:id="@+id/email_edit_register"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="293dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/square_background"
        />
    <TextView
        android:id="@+id/email_id"
        android:layout_width="wrap_content"
        android:layout_height="25dp"

        android:layout_alignParentTop="true"

        android:fontFamily="@font/pattaya"
        android:gravity="top"
        android:text="@string/email"
        android:textAppearance="@style/medium_large_text_style"
        app:layout_constraintBottom_toBottomOf="@id/email_edit_register"
        app:layout_constraintRight_toLeftOf="@id/email_edit_register"
        app:layout_constraintTop_toTopOf="@id/email_edit_register"
        android:layout_marginEnd="40sp"
        />



    <EditText
        android:id="@+id/password_edit_register"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@id/email_edit_register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="textPassword"
        android:background="@drawable/square_background"
        />
    <TextView
        android:id="@+id/password_id"
        android:layout_width="wrap_content"
        android:layout_height="25dp"

        android:layout_alignParentTop="true"

        android:fontFamily="@font/pattaya"
        android:gravity="top"
        android:text="@string/password"
        android:textAppearance="@style/medium_large_text_style"
        app:layout_constraintBottom_toBottomOf="@id/password_edit_register"
        app:layout_constraintRight_toLeftOf="@id/password_edit_register"
        app:layout_constraintTop_toTopOf="@id/password_edit_register"
        android:layout_marginEnd="15sp"
        />

    <EditText
        android:id="@+id/confirmPassword_edit_register"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@id/password_edit_register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/square_background"
        android:inputType="textPassword"
        />
    <TextView
        android:id="@+id/confirmPassword_id"
        android:layout_width="60sp"
        android:layout_height="40dp"

        android:layout_alignParentTop="true"

        android:fontFamily="@font/pattaya"
        android:gravity="top"
        android:text="@string/confirm_password"
        android:textAppearance="@style/medium_large_text_style"
        app:layout_constraintBottom_toBottomOf="@id/confirmPassword_edit_register"
        app:layout_constraintRight_toLeftOf="@id/confirmPassword_edit_register"
        app:layout_constraintTop_toTopOf="@id/confirmPassword_edit_register"
        android:layout_marginEnd="15sp"
        />





    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/get_link_btn_register"
        android:layout_width="224dp"
        android:layout_height="37dp"
         android:background="@drawable/rounded_corner_background"
        app:layout_constraintTop_toBottomOf="@id/confirmPassword_edit_register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="35sp"
        android:text="@string/get_link"
        style="@style/button_text_style"
        />


    <TextView
        android:id="@+id/register_text_with_google_authorization"
        android:layout_width="170dp"
        android:layout_height="60dp"
     app:layout_constraintBottom_toTopOf="@id/google_img_register"
app:layout_constraintLeft_toLeftOf="@id/google_img_register"
        app:layout_constraintRight_toRightOf="@id/google_img_register"
        android:fontFamily="@font/open_sans"
        android:text="@string/or_register_with_google"
        android:textAppearance="@style/normal_text_style"
android:textAlignment="center"
        />


    <ImageView
        android:id="@+id/google_img_register"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:src="@drawable/google_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="40sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>