<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="130sp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/circle_background"
   android:layout_marginTop="10sp"
    >
    <ImageView
        android:id="@+id/image_item"
        android:layout_width="86dp"
        android:layout_height="52dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/profession_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
app:layout_constraintTop_toTopOf="parent"

        />
    <TextView
        android:id="@+id/names_item"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/names_course"
        android:textAppearance="@style/normal_text_style"
        android:fontFamily="@font/pattaya"
        android:gravity="top"
        app:layout_constraintTop_toBottomOf="@id/image_item"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10sp"
        />

    <TextView
        android:id="@+id/money_item"
        android:layout_width="38dp"
        android:layout_height="19dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/square_background"
         app:layout_constraintTop_toBottomOf="@id/names_item"
        app:layout_constraintLeft_toLeftOf="parent"
         android:text="@string/money"
         android:textAppearance="@style/golden_style"
        android:textAlignment="center"
        android:fontFamily="@font/pattaya"
        />
    <TextView
        android:id="@+id/names_profession_item"
        android:layout_width="82dp"
        android:layout_height="22dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="291dp"
        android:text="@string/profession_example"
        android:textAppearance="@style/normal_text_style"
        android:fontFamily="@font/pattaya"
        android:gravity="top"
        app:layout_constraintTop_toBottomOf="@id/names_item"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/data_profession_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50sp"
        android:layout_marginTop="20sp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>